Remove sidebar-strick css to fix overflow problem.

--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -58,6 +58,7 @@ html {
   padding: 2rem 1rem;
   color: rgba(255,255,255,.5);
   background-color: #202020;
+  overflow: scroll;
 }
 @media (min-width: 48em) {
   .sidebar {
@@ -105,14 +106,14 @@ a.sidebar-nav-item:focus {
  * contents to the bottom of the sidebar in tablets and up.
  */
 
-@media (min-width: 48em) {
+/* @media (min-width: 48em) {
   .sidebar-sticky {
     position: absolute;
     right:  1rem;
     bottom: 1rem;
     left:   1rem;
   }
-}
+} */
 
 
 /* Container
